For issue #45, allow folders to be expanded or collapsed.

--- a/code/kthoom.css
+++ b/code/kthoom.css
@@ -428,6 +428,18 @@ button:focus {
   border-top: solid 1px yellow;
 }
 
+.readingStackFolder.collapsed div {
+  display: none;
+}
+
+.readingStackFolder span.zippyButton::before {
+  content: "▼ ";
+}
+
+.readingStackFolder.collapsed span.zippyButton::before {
+  content: "▶ ";
+}
+
 /** Metadata Viewer */
 #metadataViewer {
   margin-left: calc(40em - 30px);
